# hassette-examples

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: hassette.toml
config/ha/: configuration.yaml
src/: climate_controller.py  cover_scheduler.py  motion_lights.py  presence_tracker.py  security_monitor.py
src/hassette_examples/: climate_controller.py  cover_scheduler.py  presence_tracker.py  security_monitor.py
